update readme fix spacing on search bar

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -210,10 +210,9 @@ nav input {
     background: none;
     border: none;
     font-weight: bold;
-    height: 35px;
+    height: 34px;
     padding-left: 43px;
-    font-size: 12px;
-    font-family: monospace, Arial;
+    font-size: 13px;
 }
 
 
